improved example navigation

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,10 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '7.0'
 
-target "Demo" do
-  pod "DHLoadingIndicatorView", :path => "../"
-end
+xcodeproj 'LoadingIndicatorExample/LoadingIndicatorExample.xcodeproj'
+pod "DHLoadingIndicatorView", :path => "../"
 
 # Uncomment the following lines to add testing dependencies
 # target "DemoTests" do
 #   pod 'Expecta'
 # end
-
