--- a/Example/LoadingIndicatorExample/LoadingIndicatorExample/LoadingIndicatorExample-Info.plist
+++ b/Example/LoadingIndicatorExample/LoadingIndicatorExample/LoadingIndicatorExample-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.randomaccident.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.randomaccident.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
